# home

./: .aliases  .backup-exclude  .bash_profile  .bashrc  .chezmoidata.toml  .chezmoiexternal.toml  .chezmoiignore  .gitconfig  .gitignore  .gitmodules  .p10k.zsh  .profile  .taskrc  .tigrc  .tmux-molokai.conf  .tmux.conf  .vimrc  .zprofile  .zshenv  .zshrc  README.md  bashrc  default_ycm_extra_conf.py  dot_aliases  dot_gitconfig  dot_gitignore  dot_profile  dot_vimrc  dot_zprofile  dot_zshrc  ghci  gitconfig  gitignores  gvimrc  hgrc  install.conf.yaml  slate  slate.js  spacemacs  tigrc  (+5 more)
.agents/: AGENTS.md
.chezmoiscripts/: run_once_build-fzf.sh.tmpl
.chezmoitemplates/: copy  fastcopyVersion  fzfVersion
.claude/: CLAUDE.md  docs  settings.json
.config/: .gitignore  starship.toml
.gitconfig.d/: go  mergetool  stg
.hammerspoon/: init.lua  lock.lua  mouse.lua  nohide.lua  win.lua
.profile.d/: arrayutil  bat  dircolors  dirutil  editor  eza  github  glow  golang  haskell  home_path  homebrew  hostname  man  mise  netlify  node  obsidian  pager  pathutil  python  ripgrep  ruby  rust  sbin_path  term  xdg
.stack/: .gitignore  config.yaml
.taskrc.d/: monokai.theme  theme
.zsh/: git_prompt.sh  gitstatus.py
dot_config/: .chezmoiignore
dot_gitconfig.d/: alias  delta  github  github.tmpl  stg
dot_profile.d/: editor  editor.tmpl  fasd  homebrew  homebrew.tmpl  node  pager  zig
dot_tmux/: executable_select.sh
dot_zsh/: .chezmoiexternal.toml
etc/: .chezmoiignore
global/: gitconfig  (+2 more)
tools/clip/: Cargo.toml  Makefile  mise.toml
tools/clip/src/: main.rs
(+322 files in other folders)
