[package]
name = "clip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.3.0"

[dependencies.clap]
version = "4.4.11"
default-features = false
features = ["std", "help", "usage", "error-context", "derive"]
